# git-Damo

./: README.md  hhh
.superpowers/sdd/: final-fix-report.md  progress.md  task-1-brief.md  task-1-report.md  task-1-review-package.md  task-10-brief.md  task-10-report.md  task-11-brief.md  task-11-report.md  task-12-brief.md  task-12-report.md  task-2-brief.md  task-2-report.md  task-2-review-package.md  task-3-brief.md  task-3-report.md  task-3-review-package.md  task-4-brief.md  task-4-report.md  task-4-review-package.md  task-5-brief.md  task-5-report.md  task-6-brief.md  (+7 more)
Web/: .env.example  .gitignore  README.md  docker-compose.yml
smart-party-building/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  项目计划书.md
smart-party-building/app/: main.py
smart-party-building/app/agents/: __init__.py  query_agent.py  recommend_engine.py  report_generator.py
smart-party-building/app/api/: health.py  query.py  recommend.py  report.py
smart-party-building/app/core/: __init__.py  config.py  database.py  embedding.py  llm.py
smart-party-building/app/models/: __init__.py  database.py  schemas.py
smart-party-building/app/rag/: __init__.py  document_loader.py  retriever.py  text_splitter.py  vector_store.py
smart-party-building/app/tools/: __init__.py  calculator_tool.py  search_tool.py  sql_tool.py
smart-party-building/frontend/: index.html
smart-party-building/scripts/: ingest_docs.py  init_db.py  init_db.sql  seed_data.py
smart-party-building/tests/: test_query.py  test_recommend.py  test_report.py
(+136 files in other folders)
