[project]
name = "smart-party-building"
version = "1.0.0"
description = "智慧党建智能体 - 基于 LangChain + DeepSeek 的自然语言查询、个性化推荐与学习报告生成系统"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-deepseek>=0.1.0",
    "langchain-milvus>=0.2.0",
    "pymilvus>=2.4.0",
    "sqlalchemy>=2.0",
    "pymysql>=1.1.0",
    "aiomysql>=0.2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=3.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
